# scratch

./: README.md
advent_2020/: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
advent_2020/src/advent/: __init__.py  console.py
advent_2020/src/advent/day00/: __init__.py  main.py
advent_2020/src/advent/day01/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day02/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day03/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day04/: __init__.py  example.txt  main.py  puzzle.txt
advent_2020/src/advent/day05/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day06/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day07/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day08/: __init__.py  compy.py  main.py  puzzle.txt
advent_2020/src/advent/day09/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day10/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day11/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day12/: __init__.py  main.py  puzzle.txt
advent_2020/src/advent/day13/: __init__.py  main.py  puzzle.txt
advent_2020/tests/: test_day00.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py
(+333 files in other folders)
