[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Advent of code 2020 challenge"
authors = ["Ian Preston"]
license = "GPL-2.0-or-later"
readme = "README.md"
homepage = "https://github.com/ianepreston/advent_2020"
repository = "https://github.com/ianepreston/advent_2020"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
pandas-vet = "^0.2.2"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.4"
xdoctest = "^0.14.0"
safety = "^1.9.0"
mypy = "^0.790"
flake8-annotations = "^2.4.1"

[tool.poetry.scripts]
advent = "advent.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
